[project]
name = "sanic-boot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "嬴寒", email = "yinghan22@163.com" }]
requires-python = ">=3.14"
dependencies = [
    "sanic>=25.3.0",
    "tortoise-orm>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true


[project.scripts]
sanic-boot-init = "sanic_boot.manager:sanicBootInit"
sanic-boot = "sanic_boot.manager:sanicBooter"
