[project]
name = "sanic-boot"
version = "0.0.3"
description = "A web framework base on Sanic"
readme = "README.md"
authors = [{ name = "嬴寒", email = "yinghan22@163.com" }]
requires-python = ">=3.9"
dependencies = [
    "sanic<=24.6",
    "tortoise-orm<=0.21.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true


[project.scripts]
sanic-boot-init = "sanic_boot.manager:sanicBootInit"
sanic-boot = "sanic_boot.manager:sanicBooter"
